[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/Level3.gd" type="Script" id=1]
[ext_resource path="res://scenes/Bomb.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/SplitGate.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LightNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/AndGate.tscn" type="PackedScene" id=5]

[node name="Level3" type="Node2D"]
script = ExtResource( 1 )

[node name="Bomb" parent="." instance=ExtResource( 2 )]

[node name="Explosive" parent="Bomb" index="1"]
__meta__ = {
"_edit_group_": true
}

[node name="Input" parent="Bomb/Explosive" index="1"]
locked = true

[node name="BombClock" parent="Bomb" index="2"]
__meta__ = {
"_edit_group_": true
}

[node name="Output" parent="Bomb/BombClock" index="4"]
locked = true

[node name="BatteryPack" parent="Bomb" index="3"]
position = Vector2( 408, 88 )

[node name="Output" parent="Bomb/BatteryPack" index="2"]
locked = true

[node name="SplitGate" parent="Bomb" instance=ExtResource( 3 )]
position = Vector2( 392, 160 )

[node name="Input" parent="Bomb/SplitGate" index="2"]
locked = true

[node name="LightNode" parent="Bomb" instance=ExtResource( 4 )]
position = Vector2( 248, 88 )

[node name="Input" parent="Bomb/LightNode" index="2"]
position = Vector2( 53, 36 )
rotation = 0.0

[node name="AndGate" parent="Bomb" instance=ExtResource( 5 )]
position = Vector2( 280, 160 )

[node name="Output" parent="Bomb/AndGate" index="4"]
locked = true

[editable path="Bomb"]
[editable path="Bomb/Explosive"]
[editable path="Bomb/BombClock"]
[editable path="Bomb/BatteryPack"]
[editable path="Bomb/SplitGate"]
[editable path="Bomb/LightNode"]
[editable path="Bomb/AndGate"]
